--- a/Client/index_delay.html
+++ b/Client/index_delay.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-        <script src="client.js"></script>
+        <script src="client_delay.js"></script>
         <style type="text/css">
             .hidden{
                 visibility:hidden;
