Recent fixes and tweaks

--- a/Client/index.html
+++ b/Client/index.html
@@ -52,7 +52,7 @@
         
         <!-- Test 2 -->
 
-        <h3 id="T2">Test 2/3 (Client delay):</h3>
+        <h3 id="T2" class="hidden">Test 2/3 (Client delay):</h3>
         <!-- Test 1 success -->
         <div id="8" class="hidden">
             <h4>Test 1 successful!<br>Starting test 2...</h4>
@@ -81,7 +81,7 @@
 
         <!-- Test 3 -->
 
-        <h3 id="T3">Test 3/3 (Server and Client delay):</h3>
+        <h3 id="T3" class="hidden">Test 3/3 (Server and Client delay):</h3>
         <!-- Test 1 success -->
         <div id="14" class="hidden">
             <h4>Test 1 successful!<br>Starting test 2...</h4>
@@ -107,7 +107,7 @@
              <h3>Test 3 is over.</h3>
         </div>
 
-        <h3 id="20" style="color:red;">Test is over. You can now close this window.</h3>
+        <h3 id="20" style="color:red;" class="hidden">Test is over. You can now close this window.</h3>
         
         <script type="text/javascript">
             pageReady();
