--- a/Client/index.html
+++ b/Client/index.html
@@ -104,10 +104,9 @@
         </div>
         <!-- Done -->
         <div id="19" class="hidden">
-             <h3>Test 3 is over.</h3>
+            <h3>Test 3 is over.</h3>
+            <h2 id="20" style="color:red;" >Test is over. You can now close this window.</h2>
         </div>
-
-        <h3 id="20" style="color:red;" class="hidden">Test is over. You can now close this window.</h3>
         
         <script type="text/javascript">
             pageReady();
