Ready for test. Likely functional

--- a/Reverse_case/Client/index.html
+++ b/Reverse_case/Client/index.html
@@ -12,7 +12,8 @@
     <body>
         <!--Always shown -->
         <div id="Header">
-            <h1>Testing webRTC connection-offer. Thank you for your help.</h1> <h1 style="color:red;">Please leave this window open until otherwise notified. Approximate length of test: 40 minutes.</h1>
+            <h1 style="text-align: center;">Testing webRTC offer/answer lifetime.</h1> <h2 style="color:red;">Please leave this window open until otherwise notified. Approximate length of test: 40 minutes.</h2>
+            <H3>NOTE: 'Status: Failed' does <b>not</b> mean something is wrong! Please let the test continue. Thank you for your help!</H3>
         </div>
 
         <!-- Test 1 -->
