--- a/Reverse_case/Client/index.html
+++ b/Reverse_case/Client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="client.js"></script>
+        <script src="reverse/client.js"></script>
         <style type="text/css">
             .hidden{
                 visibility:hidden;
